# SEMOR

./: .gitignore  CMakeLists.txt  README.md  main.c  makefile  pids.txt  prova.txt  semor.c  test1.pos  test2.pos
RTKLIB-b34e/: .gitignore
RTKLIB-b34e/app/consapp/convbin/gcc/: convbin
RTKLIB-b34e/app/consapp/pos2kml/gcc/: pos2kml
RTKLIB-b34e/app/consapp/rnx2rtkp/gcc/: makefile
RTKLIB-b34e/app/consapp/rtkrcv/: rtkrcv.c
RTKLIB-b34e/app/consapp/rtkrcv/gcc/: rtkrcv  rtkrcv.nav
RTKLIB-b34e/app/consapp/str2str/gcc/: str2str
RTKLIB-b34e/app_old/consapp/rtkrcv/: rtkrcv.c
RTKLIB-b34e/app_old/consapp/rtkrcv/gcc/: rtkrcv  rtkrcv.conf
RTKLIB-b34e/app_old/consapp/str2str/gcc/: str2str  str2str.trace
RTKLIB-b34e/src/: ppp.c  rinex.c
conf/: ppp4pid_navcast.conf  rtk4pid.conf  test1.conf  test2.conf  test_mattia.conf
conf/test_hugo/: ppp4pid_navcast_test_hugo.conf  rtk4pid_test_hugo.conf
hugo/: imu_read  imu_read.c  makefile
logs/: gnss_data_pid.ubx
loose-gnss-imu/: CMakeLists.txt  DCM.cpp  GeoUtils.cpp  IMUmechECEF.cpp  InitializeIMU.cpp  Loose-GNSS-IMU.cpp  Loosely.cpp  ReaderGNSS.cpp  ReaderIMU.cpp  a.cpp  imu_read.c
loose-gnss-imu/Loose-GNSS-IMU/Loose-GNSS-IMU/: InitializeIMU.cpp  InitializeIMU.h  Loose-GNSS-IMU.cpp  Loose-GNSS-IMU.vcxproj  LooseKF.cpp  Loosely.cpp  Loosely.h  ReaderIMU.cpp  ReaderIMU.h
loose-gnss-imu/Loose-GNSS-IMU/Loose-GNSS-IMU/include/: Loosely.h  ReaderGNSS.h
loose-gnss-imu/include/: GeoUtils.h  IMUmechECEF.h  InitializeIMU.h  Loosely.h  ReadIMU.h  ReaderIMU.h  pch.h
src/: client.c  ctocpp.cpp  semor.c  semor.h
test/: galileo.pos  gps.pos
